overlays/uksouth-perf/default/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
  name: api.${cluster_name}.${location}.bink.sh
  namespace: default
spec:
  rules:
    - host: api.${cluster_name}.${location}.bink.sh
      http:
        paths:
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: angelia-api
                port:
                  number: 80
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: hermes-api
                port:
                  number: 80
          - path: /ubiquity/service
            pathType: Prefix
            backend:
              service:
                name: hermes-api
                port:
                  number: 80
          - path: /ubiquity/payment_card
            pathType: Prefix
            backend:
              service:
                name: hermes-api
                port:
                  number: 80
          - path: /ubiquity/payment_cards
            pathType: Prefix
            backend:
              service:
                name: hermes-api
                port:
                  number: 80
          - path: /ubiquity/membership_plan
            pathType: Prefix
            backend:
              service:
                name: hermes-api
                port:
                  number: 80
          - path: /ubiquity/membership_plans
            pathType: Prefix
            backend:
              service:
                name: hermes-api
                port:
                  number: 80
          - path: /ubiquity/membership_card
            pathType: Prefix
            backend:
              service:
                name: hermes-api
                port:
                  number: 80
          - path: /ubiquity/membership_cards
            pathType: Prefix
            backend:
              service:
                name: hermes-api
                port:
                  number: 80
          - path: /ubiquity/membership_transaction
            pathType: Prefix
            backend:
              service:
                name: hermes-api
                port:
                  number: 80
          - path: /ubiquity/membership_transactions
            pathType: Prefix
            backend:
              service:
                name: hermes-api
                port:
                  number: 80
          - path: /admin/
            pathType: Prefix
            backend:
              service:
                name: hermes-api
                port:
                  number: 80
          - path: /content
            pathType: Prefix
            backend:
              service:
                name: iris-api
                port:
                  number: 80
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: simplenginx
                port:
                  number: 80
          - path: /auth_transactions_mock/mastercard
            pathType: Exact
            backend:
              service:
                name: skiron-api
                port:
                  number: 80
  tls:
    - hosts:
        - api.${cluster_name}.${location}.bink.sh
      secretName: api.${cluster_name}.${location}.bink.sh
